[backend/frontend] Ability to import XLS and use XLS mapper into Simulation (#1247)